<resources>
    <string name="app_name">WST</string>
    <string name="name">Name *</string>
    <string name="email">EMail ID*</string>
    <string name="email2">EMail</string>
    <string name="current_email">Current E-Mail</string>
    <string name="pass">Password *</string>
    <string name="pass2">Password</string>
    <string name="confpass">Confirm Password *</string>
    <string name="student">Register</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="new_to_wts">New user</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="wst">WST</string>
    <string name="todo">TODO</string>
    <string name="feedback">FeedBack</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="help">Help</string>
    <string name="title">Subject</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="my_posts">My posts</string>
    <string name="share_text">WTS App  is an app to Safe you .Market url: play.google.com/store/apps/details?id=</string>
    <string name="phoneno">Phone No.</string>
    <string name="enter_phone_list">Enter Phone List</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="your_phones_list">Your Phones List</string>
    <string name="no_number">No number phone</string>
    <string name="no_post">No post</string>
    <string name="no_news">No News</string>
    <string name="vr4u">VR4U</string>
    <string name="administator_corner">administator corner</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="post_details">Post Details</string>
    <string name="created_at">Created At</string>
    <string name="edit">Edit</string>
    <string name="edit2">Confirm</string>
    <string name="edit_sell">Edit Sell</string>
    <string name="your_message">Your message</string>
    <string name="save">Save</string>
    <string name="phone">Phone*</string>
    <string name="faculty">Faculty/Institute</string>
    <string name="level">Level</string>
    <string name="subject">Subject</string>
    <string name="department">Department</string>
    <string name="my_profile">My profile</string>
    <string name="browse">Browse</string>
    <string name="emergency_help">Emergency Help</string>
    <string name="first_aid_help">First  Aid Help</string>
    <string name="new_message">New Message</string>
    <string name="to">To</string>
    <string name="enter_code">enter code</string>
    <string name="i_sent_you_a_code">I sent you a code, it will be detected automatically but if it is not detected you can put it below manually as well</string>
    <string name="wait_for_the_code">Wait for the code I sent you...</string>
    <string name="ag">2019</string>
    <string name="terms_condition"><![CDATA[> Terms & Condition]]></string>
    <string name="terms_condition_t"><![CDATA[ Terms & Condition]]></string>
    <string name="designation">Designation</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="hosteler">Hosteler</string>
    <string name="submit">Submit</string>
    <string name="Category">category</string>
    <string name="contact_no">Contact no</string>
    <string name="price">Price</string>
    <string name="loading">Loading</string>
    <string name="privacy_policy"><![CDATA[> Privacy Policy ]]></string>
    <string name="privacy_policy_t"><![CDATA[ Privacy Policy ]]></string>
    <string name="forgot_password">Forgot password</string>
    <string name="new_news">new news</string>
    <string name="search">search</string>
    <string name="news">News</string>
    <array name="feedbackselect">
        <item>Select</item>
        <item>App performance</item>
        <item>About posts</item>
        <item>Request adding new feature</item>
        <item>Incorrect information</item>
        <item>Others</item>
    </array>
    <array name="identityselect">
        <item>Select Identity Proof</item>
        <item>Passport</item>
        <item>Driver\'s License</item>
        <item>National ID card</item>
        <item>Other identity documents</item>
    </array>
</resources>
