<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.FeedBackActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/phone_no_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/phoneno"
            android:inputType="number|phone"
            android:maxLines="5"
            android:minLines="4"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:background="@drawable/customborder2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />
        <Button
            android:id="@+id/add_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/phone_no_et"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundedbutton"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_btn"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/customborder"
            android:gravity="center"
            android:text="@string/your_phones_list"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"/>
        <TextView
            android:id="@+id/nonumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerview"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/no_number"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nonumber"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/customborder"
            android:gravity="center"
            android:text="@string/your_message"/>
        <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/text3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/message"
            android:inputType="number|phone"
            android:maxLines="5"
            android:minLines="4"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:background="@drawable/customborder2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />
        <Button
            android:id="@+id/save_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/message_et"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundedbutton"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>