<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.HelpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/buy_sell"
                android:gravity="center"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/buy_and_sell"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/todo" />
        <Button
            android:id="@+id/buy_btn"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/buy"
            android:background="@drawable/roundedbutton2"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/sell_btn"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:text="@string/sell"
            android:background="@drawable/roundedbutton2"
            android:layout_below="@+id/buy_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>