<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="27sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:padding="3dp"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@drawable/customborder2"
            android:textColorHint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:foregroundGravity="center"
                android:hint="@string/email2"
                android:inputType="textEmailAddress"
                android:padding="2dp"
                android:fontFamily="@font/roboto_thin"
                android:singleLine="true"
                android:textSize="23sp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/roboto_bold"
            android:padding="15dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />



        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorError" />
        <TextView
            android:id="@+id/tandc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_condition"
            android:gravity="center"
            android:fontFamily="@font/timeless_normal"
            android:textSize="16sp"
            android:textColor="@color/gray_bg" />
        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/timeless_normal"
            android:textSize="16sp"
            android:textColor="@color/gray_bg" />

    </LinearLayout>
</ScrollView>
