<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedBackActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/administator_corner"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/admin_corner"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_below="@+id/imageView"
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/title"
            android:inputType="textMultiLine|text"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/title_et"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/message"
            android:inputType="textMultiLine|text"
            android:maxLines="5"
            android:minLines="4"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            tools:ignore="Autofill" />
        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/message_et">
            <Button
                android:id="@+id/browse_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/browse"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:text="To"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:entries="@array/feedbackselect"

                />

        </LinearLayout>

        <Button
            android:id="@+id/send_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/line1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundedbutton2"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/error2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:layout_below="@+id/send_btn"
            android:textColor="@color/colorError" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>